force-app/main/default/objects/cgcloud__Custom_Calendar__c/cgcloud__Custom_Calendar__c.object-meta.xml
<CustomObject>
    <description>This object holds the attributes of the custom calendar.</description>
    <label>Custom Calendar</label>
    <nameField>
        <displayFormat>CC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Calendars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>