force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Activated_By_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activated_By_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the user who activated the custom calendar.</description>
    <label>Activated By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Calendars_Activated_By_UserId</relationshipName>
    <type>Lookup</type>
</CustomField>