force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Activated_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Activated_Time__c</fullName>
    <description>Holds the timestamp when the custom calendar is activated.</description>
    <label>Activated Time</label>
    <type>DateTime</type>
</CustomField>