force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reference to the custom calendar activated for the sales org.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>