force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Date_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_From__c</fullName>
    <description>Start date of the custom calendar</description>
    <inlineHelpText>Start date of the custom calendar</inlineHelpText>
    <label>Date From</label>
    <summarizedField>cgcloud__Custom_Period__c.cgcloud__Date_From__c</summarizedField>
    <summaryForeignKey>cgcloud__Custom_Period__c.cgcloud__Custom_Calendar__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>