force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Date_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Date_Thru__c</fullName>
    <description>End date of the custom calendar</description>
    <inlineHelpText>End date of the custom calendar</inlineHelpText>
    <label>Date Thru</label>
    <summarizedField>cgcloud__Custom_Period__c.cgcloud__Date_Thru__c</summarizedField>
    <summaryForeignKey>cgcloud__Custom_Period__c.cgcloud__Custom_Calendar__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>