force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Last_Extended_By_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Extended_By_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the user who extended the custom calendar.</description>
    <label>Last Extended By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Calendars_Extended_By_UserId</relationshipName>
    <type>Lookup</type>
</CustomField>