force-app/main/default/objects/cgcloud__Custom_Calendar__c/fields/cgcloud__Last_Extended_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Extended_Time__c</fullName>
    <description>Holds the timestamp when the custom calendar was extended.</description>
    <label>Last Extended Time</label>
    <type>DateTime</type>
</CustomField>